--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.24.4",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.483.0",
     "next": "15.2.0",
